--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CiWeb</title>
+  <title>Congreso Interactivo Web</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
+  
+<div class="header">
+  <a href="/senators">Senadores</a>
+  <a href="/diputados">Diputados</a>
+</div>
 
 <%= yield %>
 
