Actualicé la versión de will paginate. Agregué localización para will paginate. Agregué default locale :es.

--- a/app/views/shared/_politicians.html.erb
+++ b/app/views/shared/_politicians.html.erb
@@ -20,4 +20,5 @@
 
 <%= will_paginate personas %>
 
-<%= raw page_entries_info personas %>
+
+<%= raw page_entries_info personas, :entry_name => 'Legisladores' %>
