Moví el show al nombre. Saqué el texto del h1 porque no se mostraba bien. Cambié el number_to_percentage para que se muestre mejor.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 <div class="container">  
   <div class="header clearfix">
-    <h1 class="site-name">Congreso Interactivo</h1>
+    <h1 class="site-name"></h1>
     <nav class="main-menu">
       <a href="/senators">Senadores</a>
       <a href="/diputados">Diputados</a>
