--- a/app/views/senators/show.html.erb
+++ b/app/views/senators/show.html.erb
@@ -2,4 +2,4 @@
 
 <%= render :partial => 'shared/politician', :locals => {:politician => @senator} %>
 
-<%= link_to 'Back', senators_path %>
+<%= link_to 'Lista de Senadores', senators_path %>
