--- a/app/views/diputados/show.html.erb
+++ b/app/views/diputados/show.html.erb
@@ -2,4 +2,4 @@
 
 <%= render :partial => 'shared/politician', :locals => {:politician => @diputado} %>
 
-<%= link_to 'Back', diputados_path %>
+<%= link_to 'Lista de Diputados', diputados_path %>
