--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,7 +1,7 @@
 body { background-color: #fff; color: #333; }
 
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: helvetica, arial, sans-serif;
   font-size:   13px;
   line-height: 18px;
 }
@@ -77,21 +77,52 @@ html,body{width:100%;}
   width:217px;
 }
 .main-menu{
-  margin-top: 20px;
+  float: left;
+  margin-left: 40px;
+  width: 690px;
+  margin-top: 14px;
 }
 .main-menu a{
-  font-size: 18px;
+  font-size: 12px;
   text-decoration: none;
+  padding: 6px 14px;
+  display: block;
+  float: left;
+  margin: 0 5px;
+  font-weight: bold;
+  text-shadow: 0 1px 0 white;
+  font-family: Helvetica, Arial, sans-serif;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
 }
-.main-menu a:hover{color:#0192B5;}
+.main-menu a:hover{color:#0192B5;background-color:#E8EFF5;}
+.main-menu a.active{
+  color: white;
+  background-color: #719EC3;
+  text-shadow: 0 -1px 0 #4D85B4;
+}
 
 /* Tablas de diputados y senadores */
+.main-content h1{
+  font-size: 21px;
+  font-weight: normal;
+  margin-top: 40px;
+}
+.lista-funcionarios{
+  width: 100%;
+  border-collapse: collapse;
+}
 .lista-funcionarios th{
   color: #666;
-  font-size: 10px;
+  font-size: 11px;
   font-weight: normal;
+  padding: 5px 10px;
   text-align: left;
   text-transform: uppercase;
+}
+.lista-funcionarios tr:nth-child(odd) td{
+  background-color:#F3F3F3;
 }
 .lista-funcionarios td{
   border-top:1px solid #DDD;
@@ -105,9 +136,11 @@ html,body{width:100%;}
 .lista-funcionarios .ausente{
   text-align:right;
 }
-/* ---- Pagination ---- */
+/*-- Tablas: Paginacion */
+.pagination{margin:20px 0;}
 .pagination a,
-.pagination span{
+.pagination span,
+.pagination em{
     color:#666666;
     display:block;
     float:left;
@@ -118,9 +151,13 @@ html,body{width:100%;}
     text-decoration:none;
     text-shadow:0 1px 0 #FFFFFF;
 }
-.pagination a:hover {color:#0192B5;}
-.pagination a:visited{color:#999999;}                                    
-.pagination .current{
+.pagination span.disabled,
+.pagination a.disabled{
+  color: #CCC;
+}
+.pagination a:visited{color:#999999;}
+.pagination a:hover {color:#0192B5;}                                  
+.pagination em{
     -moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;
     background-color:#CCCCCC;
     color:#FFFFFF;
@@ -128,16 +165,11 @@ html,body{width:100%;}
     display:block;
     text-shadow:0 1px 0 #888888;
 }
-.pager li .button{
-    float:left;
-    margin-top:2px;
-    opacity:0.5;
-    padding:0 2px;
-}
-.pager li .button:hover{
-    opacity:1;
-}
-.pager .mini-bt img{
-    margin:0 2px;
-    max-height:9px;
+
+/* Perfil del legislador */
+.perfil-legislador img{
+  float: left;
+  margin: 0 15px 15px 0;
+  padding: 3px;
+  border: 1px solid #EEE;
 }
