--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <div class="header clearfix">
     <h1 class="site-name"></h1>
     <nav class="main-menu">
+      <a href="/political_parties" class="<%= request.path == '/political_parties' ? "active" : "" %>" >Partidos Políticos</a>
       <a href="/senators" class="<%= request.path == '/senators' ? "active" : "" %>" >Senadores</a>
       <a href="/diputados" class="<%= request.path == '/diputados' ? "active" : "" %>" >Diputados</a>
     </nav>
