--- a/app/views/shared/_politician.html.erb
+++ b/app/views/shared/_politician.html.erb
@@ -7,16 +7,15 @@
 
     <div class="details">
       <label>Email: </label><%= politician.mail %> <br/>
-      <label>Partido: </label><%= politician.partido.name %>      
+
+      <% if politician.partido %>
+        <label>Partido: </label><%= politician.partido.name %>      
+      <% end %>
     </div>
     
     <div class="votes">
       <h2>Votos</h2>
       
-      <ul>
-        <% politician.votes.each do |vote| %>
-          <li class="<%= vote.voteType.downcase %>">Voto: <%= display_vote_type(vote.voteType) %>, Proyecto: <%= display_project_title(vote.project) %> (<%= link_to "Leer más", vote.project %>)</li>
-        <% end %>
-      </ul>
+      <%= render :partial => 'shared/votes', :locals => {:votes => politician.votes}%>
     </div>
 </div>
