quité decimales al %

--- a/app/views/shared/_politicians.html.erb
+++ b/app/views/shared/_politicians.html.erb
@@ -10,7 +10,7 @@
 <% personas.each do |persona| %>
   <tr>
     <td class="nombre"><%= link_to "#{persona.lastName}, #{persona.name}", persona %></td>
-    <td class="presentismo"><%= number_to_percentage(persona.countPresentPercentage.to_f * 100.0, :precision => 2, :separator => ',', :strip_insignificant_zeros => true) %></td>        
+    <td class="presentismo"><%= number_to_percentage(persona.countPresentPercentage.to_f * 100.0, :precision => 0, :separator => ',') %></td>        
     <td class="presente"><%= persona.countPresent %></td>
     <td class="ausente"><%= persona.absent %></td>    
   </tr>
