--- a/app/views/shared/_politician.html.erb
+++ b/app/views/shared/_politician.html.erb
@@ -1,21 +1,18 @@
-<div class="perfil-legislador">
+<div id="perfil-legislador" class="clearfix">
     <% if politician.photoPath %>
       <%= image_tag politician.photoPath, :alt => politician.name, %>
     <% end %>
 
     <h1><%= "#{politician.lastName}, #{politician.name}" %></h1>
+    <dl>
+	<dt>Email:</dt><dd><%= politician.mail %> </dd>
 
-    <div class="details">
-      <label>Email: </label><%= politician.mail %> <br/>
-
-      <% if politician.partido %>
-        <label>Partido: </label><%= politician.partido.name %>      
-      <% end %>
-    </div>
-    
-    <div class="votes">
-      <h2>Votos</h2>
-      
-      <%= render :partial => 'shared/votes', :locals => {:votes => politician.votes}%>
-    </div>
+  <% if politician.partido %>
+    <dt>Partido: </dt><dd><%= politician.partido.name %></dd>      
+  <% end %>
+    </dl>
+</div>    
+<div id="votos">
+    <h2>Votos</h2>
+    <%= render :partial => 'shared/votes', :locals => {:votes => politician.votes}%>
 </div>
