--- a/app/views/shared/_politician.html.erb
+++ b/app/views/shared/_politician.html.erb
@@ -1,16 +1,18 @@
-<div id="perfil-legislador" class="clearfix">
-    <% if politician.photoPath %>
-      <%= image_tag politician.photoPath, :alt => politician.name, %>
-    <% end %>
+<div id="perfil-legislador">
+    <div id="informacion-personal" class="clearfix">
+        <% if politician.photoPath %>
+            <%= image_tag politician.photoPath, :alt => politician.name, %>
+            <% end %>
 
-    <h1><%= "#{politician.lastName}, #{politician.name}" %></h1>
-    <dl>
-	<dt>Email:</dt><dd><%= politician.mail %> </dd>
+            <h1><%= "#{politician.lastName}, #{politician.name}" %></h1>
+            <dl>
+	            <dt>Email:</dt><dd><%= politician.mail %> </dd>
 
-  <% if politician.partido %>
-    <dt>Partido: </dt><dd><%= politician.partido.name %></dd>      
-  <% end %>
-    </dl>
+                <% if politician.partido %>
+                <dt>Partido: </dt><dd><%= politician.partido.name %></dd>      
+                <% end %>
+            </dl>
+        </div>
 </div>    
 <div id="votos">
     <h2>Votos</h2>
