--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 <div id="container">  
   <div id="header" class="clearfix">
-    <h1 class="site-name"></h1>
+    <h1 class="logo">Congreso Interactivo</h1>
     <div id="nav">
         <ul class="clearfix">
             <li class="partidos-politicos"><a href="/political_parties" class="<%= request.path == '/political_parties' ? "active" : "" %>" >Partidos Políticos</a></li>
