Cambié el nombre de la clase y estilo de bloques.

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -121,7 +121,7 @@ html,body{
 	margin:0;
 	
 }
-#nav li.partidos-politicos{width:140px;}
+#nav li.bloques{width:84px;}
 
 
 /* Tablas de diputados y senadores */
