--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <h1 class="logo">Congreso Interactivo</h1>
     <div id="nav">
         <ul class="clearfix">
-            <li class="partidos-politicos"><a href="/political_parties" class="<%= request.path == '/political_parties' ? "active" : "" %>" >Partidos Políticos</a></li>
-            <li class="senadores"><a href="/senators" class="<%= request.path == '/senators' ? "active" : "" %>" >Senadores</a></li>
+            <li class="bloques"><a href="/bloques" class="<%= request.path == '/bloques' ? "active" : "" %>" >Bloques</a></li>
+            <li class="senadores"><a href="/senadores" class="<%= request.path == '/senadores' ? "active" : "" %>" >Senadores</a></li>
             <li class="diputados"><a href="/diputados" class="<%= request.path == '/diputados' ? "active" : "" %>" >Diputados</a></li>
         </ul>
     </div>
