Agregué el partial de filtros.

--- a/app/views/diputados/index.html.erb
+++ b/app/views/diputados/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Diputados</h1>
 
+<%= render :partial => 'shared/bloques_filter', :locals => { :bloques => @bloques } %>
+
 <%= render :partial => 'shared/politicians', :locals => {:personas => @diputados}%>
