--- a/app/views/senators/index.html.erb
+++ b/app/views/senators/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Senadores</h1>
 
+<%= render :partial => 'shared/bloques_filter', :locals => { :bloques => @bloques } %>
+
 <%= render :partial => 'shared/politicians', :locals => {:personas => @senators}%>
