--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title>Congreso Interactivo</title>
   <link rel="author" href="humans.txt" />
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag :all %>  
+  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "application.js", "chosen.jquery.min.js" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
@@ -14,8 +14,8 @@
     <div id="nav">
         <ul class="clearfix">
             <li class="bloques"><a href="/bloques" class="<%= request.path == '/bloques' ? "active" : "" %>" >Bloques</a></li>
-            <li class="senadores"><a href="/senadores" class="<%= request.path == '/senadores' ? "active" : "" %>" >Senadores</a></li>
-            <li class="diputados"><a href="/diputados" class="<%= request.path == '/diputados' ? "active" : "" %>" >Diputados</a></li>
+            <li class="senadores"><a href="/senadores" class="<%= params[:controller] == 'senators' ? "active" : "" %>" >Senadores</a></li>
+            <li class="diputados"><a href="/diputados" class="<%= params[:controller] == 'diputados' ? "active" : "" %>" >Diputados</a></li>
         </ul>
     </div>
   </div>
