--- a/app/views/shared/_politicians.html.erb
+++ b/app/views/shared/_politicians.html.erb
@@ -1,27 +1,27 @@
-<table class="lista-funcionarios">
-  <tr>
-    <th>Nombre</th>
-    <th class="presentismo">Presencia (%)</th>      
-    <th class="presente">Presencias</th>
-    <th class="ausente">Ausencias</th>        
-    <th class="licencia">Licencia</th>            
-    <th class="mision">Misión Oficial</th>                
-    <th></th>
-  </tr>
-
+<table id="tabla-funcionarios" class="lista-funcionarios">
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th class="presentismo">Presencia (%)</th>      
+      <th class="presente">Presencias</th>
+      <th class="ausente">Ausencias</th>        
+      <th class="licencia">Licencia</th>            
+      <th class="mision">Misión Oficial</th>                
+    </tr>
+  </thead>
+  <tbody>
 <% personas.each do |persona| %>
-  <tr>
-    <td class="nombre"><%= link_to "#{persona.lastName}, #{persona.name}", persona %></td>
-    <td class="presentismo"><%= number_to_percentage(persona.present_percentage * 100.0, :precision => 0, :separator => ',') %></td>        
-    <td class="presente"><%= persona.countPresent %></td>
-    <td class="ausente"><%= persona.countAbsence %></td>    
-    <td class="licencia"><%= persona.countLicense %></td>    
-    <td class="mision"><%= persona.countOfficialMission %></td>            
-  </tr>
+    <tr>
+      <td class="nombre"><%= link_to "#{persona.lastName}, #{persona.name}", persona %></td>
+      <td class="presentismo"><%= number_to_percentage(persona.present_percentage * 100.0, :precision => 0, :separator => ',') %></td>        
+      <td class="presente"><%= persona.countPresent %></td>
+      <td class="ausente"><%= persona.countAbsence %></td>    
+      <td class="licencia"><%= persona.countLicense %></td>    
+      <td class="mision"><%= persona.countOfficialMission %></td>            
+    </tr>
 <% end %>
+  </tbody>
 </table>
-
-<%= will_paginate personas %>
 
 
 <%# raw page_entries_info personas, :entry_name => 'Legisladores' %>
