agrego twitter en las vistas de los diputados y senadores

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       });
 		});
 	</script>
+    <script type="text/javascript" src="js/css3-mediaqueries.js"></script>
   <%= csrf_meta_tag %>
 </head>
 <body>
