--- a/app/views/shared/_politician.html.erb
+++ b/app/views/shared/_politician.html.erb
@@ -18,3 +18,4 @@
     <h2>Votos</h2>
     <%= render :partial => 'shared/votes', :locals => {:votes => politician.votes}%>
 </div>
+<%= render :partial => 'shared/twitter'%>
