--- a/app/views/shared/_twitter.html.erb
+++ b/app/views/shared/_twitter.html.erb
@@ -1,4 +1,4 @@
-<div class="twitter-legislador">
+<div id="twitter-legislador">
     <script src="http://widgets.twimg.com/j/2/widget.js"></script>
     <script>
     new TWTR.Widget({
