--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -261,6 +261,10 @@ dd {
 
 
 /* Votos */
+#votos{
+    width:70%;
+    float:left;
+}
 #votos tr.positivo:hover td {
   background-color: #e5fcdb;
 }
@@ -288,6 +292,12 @@ dd {
 #votos td.como-voto{
     text-align:center;
     }
+
+/*twitter legislador*/
+#twitter-legislador{
+    width:25%;
+    float:right;
+}
 /*partidos politicos*/
 
 #detalle-presentismo dd{
