--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -256,8 +256,9 @@ td{
   float:none;
   width:98%;
   padding:10px;
-  background-color:lightgrey;
-  border-radius:5px;
+  background-color:#f0f5f9;
+  border:1px solid #cee1f1;
+  border-radius:5px ;
   -moz-border-radius:5px;
   margin-bottom:25px;
 }
