--- a/app/views/political_parties/show.html.erb
+++ b/app/views/political_parties/show.html.erb
@@ -22,8 +22,7 @@
 
 </ul>
 
-<div class="legisladores">
+<div class="legisladores-por-bloque">
   <%= render :partial => 'shared/politicians', :locals => {:personas => @miembros }%>
 </div>
 
-<%= link_to 'Back', political_parties_path %>
