--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -259,7 +259,8 @@ td{
   padding:10px;
   background-color:#f0f5f9;
   border:1px solid #cee1f1;
-  border-radius:5px ;
+  border-radius:5px;
+  -webkit-border-radius:5px;
   -moz-border-radius:5px;
   margin-bottom:25px;
 }
