cambie el h1 del logo por und div. se pisaban h1 en un mismo html

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 <body>
 <div id="container">  
   <div id="header" class="clearfix">
-    <h1 class="logo"><a href="/"><span>Congreso Interactivo</span></a></h1>
+    <div class="logo"><a href="/"><span>Congreso Interactivo</span></a></div>
     <div id="nav">
         <ul class="clearfix">
             <li class="bloques"><a href="/bloques" class="<%= request.path == '/bloques' ? "active" : "" %>" >Bloques</a></li>
