cambié la lista de votos a tabla, quité redundancias en el texto

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -141,9 +141,19 @@ html,body{
     
 }
 #main-content h1{
-  font-size: 21px;
+  font-size: 180%;
   font-weight: normal;
+  line-height:1.2;
+  margin-bottom:20px;
 }
+h2{
+  font-size: 150%;
+  font-weight: bold;
+  line-height:1.2;
+  margin-top:20px;
+}
+
+
 table{
   width: 100%;
   border-collapse: collapse;
