--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Título: <%= display_project_title(@project) %></h1>  
+<h1><%= display_project_title(@project) %></h1>  
 
 <h2>Sumario</h2>
 <div class="summary">
@@ -11,19 +11,28 @@
   Archivo relacionado: <%= @project.documentURL %>
 <% end %>
 
-<h3>Detalles</h3>
+<h2>Detalles</h2>
 Archivo: <%= @project.file %> <br/>
 Iniciado: <%= @project.initiated %> <br/>
 Fuente del Proyecto: <%= @project.projectSource %> <br/>
 
-<h4>Votación</h4>
+<h2>Votación</h2>
 
 <%if @project.votes.count == 0 %>
-  (Todavía no se votó)
+  <h3>(Todavía no se votó)</h3>
 <% else %>
-  <ul>
+ <table class="tabla-funcionarios">
+    <thead>
+          <th>Cómo Votó</th>
+          <th>Nombre</th>
+          <th>Bloque</th>
+    </thead> 
     <% @project.votes.each do |vote| %>
-      <li class="<%= vote.voteType.downcase %>">Legislador: <%= link_to "#{vote.legislador.full_name}", vote.legislador %> (Partido: <%=vote.partido ? vote.partido.name : "?" %>). Voto: <%= display_vote_type(vote.voteType) %></li>
+    <tr class="<%= vote.voteType.downcase %>">
+        <td><%= display_vote_type(vote.voteType) %></td>
+        <td><%= link_to "#{vote.legislador.full_name}", vote.legislador %></td> 
+        <td><%=vote.partido ? vote.partido.name : "?" %> </td>
+    </tr>
     <% end %>
-  </ul>
+  </table>
 <% end%>
