vista del legislador con el formulario agregado

--- a/app/views/shared/_politician.html.erb
+++ b/app/views/shared/_politician.html.erb
@@ -20,4 +20,5 @@
         <%= render :partial => 'shared/votes', :locals => {:votes => politician.votes}%>
     </div>
     <%= render :partial => 'shared/twitter'%>
+    <%= render :partial => 'shared/form_twitter'%>
 </div>
